# txodds-agent--desk

./: .dockerignore  .env.example  .gitignore  AGENTIC-EXPANSION-PLAN.md  ARENA-AUTONOMY-PLAN.md  AUTOAGENTS-ASSESSMENT.md  Cargo.toml  E2E-AGENTIC-GAPS-PLAN.md  Justfile  LOOSE-ENDS-PLAN.md  README.md  TODO.md  clippy.toml  deny.toml  docker-compose.coralos.yml  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
coral/: coral.toml
coral-agents/: README.md
coral-agents/coral_agent/: __init__.py  framework.py  wager.py
coral-agents/fan-pundit-agent/: Dockerfile  README.md  agent.py  coral-agent.toml
coral-agents/match-intelligence-agent/: agent.py
coral-agents/proof-guard-agent/: Dockerfile  README.md  agent.py  coral-agent.toml
coral-agents/seller-fan-card/: coral-agent.toml
coral-agents/seller-risk-policy/: coral-agent.toml
coral-agents/seller-worldcup-edge/: coral-agent.toml
coral-agents/settlement-agent/: Dockerfile  README.md  agent.py  coral-agent.toml
coral-agents/settlement-arbiter-agent/: coral-agent.toml
coral-agents/sharp-movement-detector/: Dockerfile  README.md  agent.py  coral-agent.toml
coral-agents/verifier-agent/: coral-agent.toml
coral-agents/worldcup-buyer-agent/: coral-agent.toml
crates/: README.md
crates/agent-core/: Cargo.toml  README.md
crates/agent-core/src/: arena.rs  capability.rs  context.rs  domain.rs  error.rs  evaluation.rs  features.rs  fundamentals.rs  lib.rs  policy.rs  proof_guard.rs  safety.rs  tools.rs
crates/agents/: README.md
crates/agents/arena-coordinator/: Cargo.toml  Dockerfile  README.md  coral-agent.toml
crates/agents/arena-coordinator/src/: main.rs
crates/agents/contrarian/: Cargo.toml  Dockerfile  README.md  coral-agent.toml
crates/agents/contrarian/src/: main.rs
crates/agents/fan-pundit-agent/: Cargo.toml  Dockerfile  coral-agent.toml
crates/agents/fan-pundit-agent/src/: main.rs
crates/agents/idle-agent/: Cargo.toml  Dockerfile
crates/agents/idle-agent/src/: main.rs
crates/agents/match-intelligence/: Cargo.toml  README.md
crates/agents/match-intelligence-agent-proxy/: coral-agent.toml
crates/agents/proof-guard-agent/: Cargo.toml  Dockerfile  coral-agent.toml
crates/agents/proof-guard-agent/src/: main.rs
crates/agents/settlement-agent/: Cargo.toml  Dockerfile  coral-agent.toml
crates/agents/settlement-agent/src/: main.rs
crates/agents/sharp-movement-detector/: Cargo.toml  README.md
crates/agents/sharp-movement-detector/src/: config.rs  detector.rs  main.rs  signal.rs  txline.rs  venice.rs
crates/agents/trading-specialist/: Cargo.toml  Dockerfile  coral-agent.toml
crates/agents/trading-specialist/src/: main.rs
crates/agents/user-proxy/: coral-agent.toml
crates/coral-client/: Cargo.toml
crates/coral-client/src/: error.rs  lib.rs  mcp.rs  wire.rs
crates/coral-e2e/: Cargo.toml
crates/coral-e2e/src/: main.rs
crates/rig-venice/: Cargo.toml  README.md  ROADMAP.md
crates/rig-venice/src/: lib.rs  loop_runner.rs  tools.rs
crates/txodds-types/: Cargo.toml  README.md
crates/txodds-types/src/: agent.rs  chain.rs  cluster.rs  coral.rs  lib.rs  oracle.rs  trace.rs  txline.rs  user.rs  wager.rs  wallet.rs
docs/: full-tauri-app-plan.md
docs/architecture/: rust-agents-plan.md
native/: Cargo.toml  README.md
native/src/: README.md  config.rs  error.rs  lib.rs  state.rs  types.rs  web.rs
native/src/commands/: README.md  arena.rs  auth.rs  autonomous.rs  backtest.rs  chain.rs  intelligence.rs  mod.rs  payments.rs
native/src/domain/: README.md  agent.rs  arena.rs  mod.rs
native/src/services/: README.md  autonomous.rs  backtest.rs  mod.rs  solana_pay.rs  user_store.rs
native/src/services/agent/: authority.rs  context.rs  evaluation.rs  features.rs  mod.rs  policy.rs  pundit_agent.rs  wager_agent.rs
native/src/services/agent/runtime/: decision.rs  events.rs  fan_pundit_delegation.rs  handoff.rs  mod.rs  persistence.rs  settlement_delegation.rs  signal.rs  trading_delegation.rs  wager_proof_delegation.rs
native/src/services/chain/: rpc.rs  yellowstone.rs
native/src/services/coral/: README.md  mod.rs  settlement.rs
native/src/services/coralos/: console.rs  mod.rs  protocol.rs  thread_reader.rs
native/src/services/ledger/: store.rs
native/src/services/llm/: venice.rs
native/src/services/proof/: mod.rs  validation.rs
native/src/services/txline/: api.rs  ingest.rs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml
src-tauri/src/: config.rs  lib.rs  main.rs  types.rs  web.rs
src-tauri/src/coral/: agents.rs  market.rs  mod.rs  settlement.rs
src-tauri/src/ledger/: mod.rs  store.rs
src-tauri/src/solana_pay/: README.md  mod.rs
src-tauri/src/triton/: mod.rs  rpc.rs  yellowstone.rs
src-tauri/src/txline/: README.md  ingest.rs  mod.rs
src/components/: AgentArena.tsx  ChainStatus.tsx  FanMode.tsx  LiveFeed.tsx  ProofPanel.tsx  SettlementLab.tsx  TrackScorecard.tsx
src/desktop/: transport.ts
src/domain/coral/: agents.ts  bidding.ts  localRound.ts  scoring.ts  settlement.ts
src/domain/triton/: client.ts
src/domain/txline/: client.ts  events.ts  mock.ts
tests/: README.md
tests/__helpers__/: README.md  fixtures.ts
tests/__mocks__/: README.md  transport.ts
tests/core/: README.md
tests/core/agent/: README.md  leaderboard.test.ts
tests/core/auth/: README.md  wallet-auth.test.ts
tests/core/chat/: time.test.ts
tests/core/coral/: README.md  scoring.test.ts
tests/core/txline/: README.md  events.test.ts  fixtures.test.ts  snapshots.test.ts
tests/e2e/: README.md  auth-flow.test.ts  fixture-to-round.test.ts  safety-pipeline.test.ts
tooling/: README.md  check-bundle-deps.mjs
ui/: README.md  main.tsx  styles.css  types.ts
ui/app/: App.tsx  README.md
ui/app/components/: AgentDashboard.tsx  AppPicker.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  README.md  WalletLogin.tsx
ui/app/hooks/: README.md  (+2 more)
ui/apps/: README.md
ui/desktop/: events.ts  transport.ts
ui/styles/: README.md  activity-feed.css  agent-track.css  chat.css
(+34 files in other folders)
