[package]
# Pure deterministic agent logic — no Tauri, no async runtime, no reqwest.
# Can be tested independently: cargo test -p agent-core
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
txodds-types = { path = "../txodds-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
