[package]
name = "coral-client"
version = "0.1.0"
edition = "2021"
description = "Rust MCP client for real CoralOS participants: connect, wait-for-mention, reply. Port of pay's packages/agent-runtime/src/coral/{mcp,server}.ts."

[dependencies]
agent-core = { path = "../agent-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"
async-trait = "0.1"
rmcp = { version = "0.9", features = ["client", "transport-streamable-http-client-reqwest"] }
