[package]
name = "rig-venice"
version = "0.1.0"
edition = "2021"
description = "Venice AI inference client factory built on rig-core (OpenAI-compat)."

[dependencies]
rig-core     = { version = "0.9", features = ["derive"] }
txodds-types = { path = "../txodds-types" }
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
schemars     = { version = "0.8", features = ["derive"] }
tracing      = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
