[package]
# Shared domain types shared between the Tauri app and standalone agent crates.
# No Tauri, no async runtime — only data contracts.
name = "txodds-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
