[package]
name = "contrarian"
version = "0.1.0"
edition = "2021"
description = "FADE-sharp agent: Venice LLM + rig tools decide positions against sharp movement."

[[bin]]
name = "contrarian"
path = "src/main.rs"

[dependencies]
agent-core   = { path = "../../agent-core" }
txodds-types = { path = "../../txodds-types" }
rig-venice   = { path = "../../rig-venice" }
rig-core     = { version = "0.9", features = ["derive"] }
coral-client = { path = "../../coral-client" }
async-trait  = "0.1"

tokio                = { version = "1", features = ["full"] }
reqwest              = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
schemars             = { version = "0.8", features = ["derive"] }
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter", "json"] }
uuid                 = { version = "1", features = ["v4"] }
tokio-util           = { version = "0.7", features = ["time"] }
