[package]
name = "fan-pundit-agent"
version = "0.1.0"
edition = "2021"
description = "Real, independent CoralOS participant for the fan-pundit narrative reaction (nudge/challenge wager proposals)."

[[bin]]
name = "fan-pundit-agent"
path = "src/main.rs"

[dependencies]
coral-client        = { path = "../../coral-client" }
agent-core          = { path = "../../agent-core" }
txodds-types        = { path = "../../txodds-types" }
rig-venice          = { path = "../../rig-venice" }
rig-core            = { version = "0.9", features = ["derive"] }
tokio               = { version = "1", features = ["full"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
schemars            = "0.8"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
async-trait         = "0.1"
