[package]
name = "proof-guard-agent"
version = "0.1.0"
edition = "2021"
description = "Real, independent CoralOS participant for the wager-consistency proof gate (agent_core::proof_guard)."

[[bin]]
name = "proof-guard-agent"
path = "src/main.rs"

[dependencies]
coral-client        = { path = "../../coral-client" }
agent-core          = { path = "../../agent-core" }
txodds-types        = { path = "../../txodds-types" }
tokio               = { version = "1", features = ["full"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
async-trait         = "0.1"
