[package]
name = "settlement-agent"
version = "0.1.0"
edition = "2021"
description = "Real, independent CoralOS participant for on-chain settlement proof verification and execution."

[[bin]]
name = "settlement-agent"
path = "src/main.rs"

[dependencies]
coral-client        = { path = "../../coral-client" }
agent-core          = { path = "../../agent-core" }
txodds-types        = { path = "../../txodds-types" }
tokio               = { version = "1", features = ["full"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
async-trait         = "0.1"
