[package]
name = "trading-specialist"
version = "0.1.0"
edition = "2021"
description = "Real, independent CoralOS participant for the Trading-track handoff. CoralOS identity is 'sharp-movement-detector' (see coral-agent.toml) — a different crate name to avoid colliding with the already-real crates/agents/sharp-movement-detector TxLINE-movement-polling binary, a different job."

[[bin]]
name = "trading-specialist"
path = "src/main.rs"

[dependencies]
coral-client        = { path = "../../coral-client" }
agent-core          = { path = "../../agent-core" }
tokio               = { version = "1", features = ["full"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
async-trait         = "0.1"
uuid                = { version = "1", features = ["v4"] }
